--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>vue-ui</title>
+    <link rel="stylesheet" href="/dist/app.css">
   </head>
   <body>
     <div id="app"></div>
